test/spec_vectors/align64/ok/module_14.wat
(module (memory i64 0) (func (i32.store8 align=1 (i64.const 0) (i32.const 1))))