test/spec_vectors/align64/fail/module_97.wat
(module (memory i64 0) (func (i32.store8 align=2 (i64.const 0) (i32.const 0))))